# computatrum-nn

./: .gitignore  README.md  chat.db  pyproject.toml
app/: App.jsx  app.json  package-lock.json  package.json
app/src/screens/: ConnectServer.jsx  Connections.jsx  Messages.jsx
computatrum/: __init__.py  __main__.py  core.py
computatrum/ui/: message.py  service.py  web.py
computatrum/utils/wrappers/: bufferred_env_wrapper.py  bufferred_multi_env_env.py  conversation_wrapper.py  env_wrapper.py  multi_env_env.py
natural-language-task-generation/nltg/: coconut.ipynb  grammar.py
notebooks/: 0-collect.py  3-teaching-and-managing.py
notebooks/task-guided-computer-interaction/: task-guided-computer-interaction.md
old/: 0-collect.py  0.ipynb  ___async_rl.py  agent copy.py  agent.py  terminal.py  try_all.py
old/task-guided-computer-interaction/: task-guided-computer-interaction.ipynb
task_guided_behavior_distilation/: task_guided_behavior_distilation.ipynb  task_guided_behavior_distilation_env_wrapper.py
